# xnotify

./: Cargo.toml  LICENSE-MIT  README.md  xnotify
src/: main.rs
src/leechbar/component/: text.rs
src/leechbar/util/: formats.rs  mod.rs
